Switched for-loops to stream.  Consolidated testing logic.  Fixed unchecked warnings in tests.  Added in palantir formatting via spotless.  Formatted classes.