@@ -4,19 +4,19 @@
  * To reach the creator, visit https://www.linkedin.com/in/saschagoldsmith.
  */
 
-
 package dev.iq.graph.model.simple;
 
-import dev.iq.common.version.Locator;
-import dev.iq.common.version.NanoId;
-import dev.iq.graph.model.Element;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Test;
+
+import dev.iq.common.version.Locator;
+import dev.iq.common.version.NanoId;
+import dev.iq.graph.model.Element;
 
 /**
  * Unit tests for SimpleComponent.
@@ -24,7 +24,7 @@ import static org.junit.jupiter.api.Assertions.*;
 class SimpleComponentTest {
 
     @Test
-    void testSimpleComponentCreation() {
+    final void testSimpleComponentCreation() {
         final var id = new NanoId("test-component-id");
         final var locator = new Locator(id, 1);
         final var data = new SimpleData(String.class, "Test Component");
@@ -42,7 +42,7 @@ class SimpleComponentTest {
     }
 
     @Test
-    void testSimpleComponentWithExpired() {
+    final void testSimpleComponentWithExpired() {
         final var id = new NanoId("test-component-id");
         final var locator = new Locator(id, 1);
         final var data = new SimpleData(String.class, "Test Component");
@@ -58,7 +58,7 @@ class SimpleComponentTest {
     }
 
     @Test
-    void testSimpleComponentWithElements() {
+    final void testSimpleComponentWithElements() {
         final var nodeId = new NanoId("node-id");
         final var nodeLocator = new Locator(nodeId, 1);
         final var nodeData = new SimpleData(String.class, "Node Data");
@@ -69,14 +69,15 @@ class SimpleComponentTest {
         final var componentData = new SimpleData(String.class, "Component Data");
         final List<Element> elements = List.of(node);
 
-        final var component = new SimpleComponent(componentLocator, elements, componentData, Instant.now(), Optional.empty());
+        final var component =
+                new SimpleComponent(componentLocator, elements, componentData, Instant.now(), Optional.empty());
 
         assertEquals(1, component.elements().size());
-        assertEquals(node, component.elements().get(0));
+        assertEquals(node, component.elements().getFirst());
     }
 
     @Test
-    void testSimpleComponentEquality() {
+    final void testSimpleComponentEquality() {
         final var id = new NanoId("test-component-id");
         final var locator = new Locator(id, 1);
         final var data = new SimpleData(String.class, "Test Component");
@@ -91,7 +92,7 @@ class SimpleComponentTest {
     }
 
     @Test
-    void testSimpleComponentInequality() {
+    final void testSimpleComponentInequality() {
         final var id1 = new NanoId("component-id-1");
         final var id2 = new NanoId("component-id-2");
         final var locator1 = new Locator(id1, 1);
@@ -107,7 +108,7 @@ class SimpleComponentTest {
     }
 
     @Test
-    void testSimpleComponentToString() {
+    final void testSimpleComponentToString() {
         final var id = new NanoId("test-component-id");
         final var locator = new Locator(id, 1);
         final var data = new SimpleData(String.class, "Test Component");
